removed bug that caused flickering
my app only draws changes to the canvas. when the window resizes, it needs you to redraw the whole frame, otherwise the screen goes black, or if you present the buffer again it flickers. i wrote it so that now even if it werent for the PresentAsync on line 98 of DebugTerminalClient the currently available terminal buffer is fully redrawn to the screen. when the window gets bigger, the new space will remain empty until the buffer view is presented again

--- a/shellil.VirtualTerminal/web/styles.css
+++ b/shellil.VirtualTerminal/web/styles.css
@@ -9,11 +9,11 @@
 canvas {
     background-color: black;
     width: 100%;
-    height: calc(100% - 30px);
+    height: 100%;
     outline: none;
 }
 
-.testbanner {
+/*.testbanner {
     width: 100%;
     height: 30px;
     display: flex;
@@ -39,7 +39,7 @@ input {
 input::placeholder {
     opacity: 0.5;
     font-weight: bold;
-}
+}*/
 
 @font-face {
     font-family: "JetBrains Mono";
